fix step-1